# ColorBaker

./: CMakeLists.txt  imgui.ini  main.cpp
src/: main.cpp
src/Domain/: BakeService.cpp  BakeService.h  FolderService.cpp  FolderService.h
src/UI/: UIComponents.h
